--- a/bots/prototypes/oberon_trading_bot_v1-1-3.ipynb
+++ b/bots/prototypes/oberon_trading_bot_v1-1-3.ipynb
@@ -26,7 +26,7 @@
       "metadata": {
         "id": "2aAxxALzQmBk"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -558,7 +558,7 @@
         "            gradeColor = \"green\"\n",
         "        elif last_z>=1:\n",
         "            gradeStr = \"B (Moderate Positive Momentum)\"\n",
-        "            gradeColor = \"mint\"\n",
+        "            gradeColor = \"lightgreen\"\n",
         "        elif last_z>=0:\n",
         "            gradeStr = \"C (Weak Positive Momentum)\"\n",
         "            gradeColor = \"goldenrod\"\n",
@@ -1292,9 +1292,9 @@
           "height": 627
         },
         "id": "4xEOCh0iRcKL",
-        "outputId": "d9b2a158-5cb5-4f6c-abac-9e4d4426de62"
+        "outputId": "e4e5b151-5f81-4e09-ca9a-50e5d74734e0"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1303,7 @@
             "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://a5697eaf997e02daec.gradio.live\n",
+            "* Running on public URL: https://e040943e1513c088cf.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1315,7 +1315,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://a5697eaf997e02daec.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://e040943e1513c088cf.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
