--- a/bots/prototypes/oberon_trading_bot_v1-1-3.ipynb
+++ b/bots/prototypes/oberon_trading_bot_v1-1-3.ipynb
@@ -26,7 +26,7 @@
       "metadata": {
         "id": "2aAxxALzQmBk"
       },
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -431,15 +431,13 @@
         "def extract_current_status(df, signalUp_ZLMA, signalDn_ZLMA, bullPt, bearPt,\n",
         "                           upSig_MCDX, dnSig_MCDX, length_m=14, macd_dict=None):\n",
         "    last = df.index[-1]\n",
-        "    # ZLMA: Buy if current ZLMA is above trend EMA, else Sell.\n",
+        "    # ZLMA: Buy if current ZLMA > current trend EMA\n",
         "    zlma_status = \"Buy\" if df['zlma'].iloc[-1] > df['ema_value'].iloc[-1] else \"Sell\"\n",
-        "    # RSI: Use the helper to get the most recent RSI signal.\n",
-        "    rsi_status = get_rsi_status(df, bullPt, bearPt)\n",
-        "    # MCDX: Use the helper for MCDX (see previous fix).\n",
-        "    mcdx_status = \"Buy\" if (isinstance(upSig_MCDX, pd.Series) and pd.notna(upSig_MCDX.loc[last])) \\\n",
-        "                    else (\"Sell\" if (isinstance(dnSig_MCDX, pd.Series) and pd.notna(dnSig_MCDX.loc[last])) \\\n",
-        "                    else \"Sell\")\n",
-        "    # DSS remains unchanged.\n",
+        "    # RSI: Buy if current RSI trail (rsi_ma_base) is below 50\n",
+        "    rsi_status = \"Buy\" if df['rsi_ma_base'].iloc[-1] < 50 else \"Sell\"\n",
+        "    # MCDX: Use the helper to get the most recent non-null signal\n",
+        "    mcdx_status = get_mcdx_status(df, upSig_MCDX, dnSig_MCDX)\n",
+        "    # DSS: Buy if DSSb > DSSsignal\n",
         "    dss_status = \"Buy\" if df['DSSb'].iloc[-1] > df['DSSsignal'].iloc[-1] else \"Sell\"\n",
         "\n",
         "    zScore = compute_zscore(df, length_m)\n",
@@ -1292,9 +1290,9 @@
           "height": 627
         },
         "id": "4xEOCh0iRcKL",
-        "outputId": "e4e5b151-5f81-4e09-ca9a-50e5d74734e0"
+        "outputId": "38bf0dc3-f42d-4f9f-b94d-bac3e2698027"
       },
-      "execution_count": null,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -1303,7 +1301,7 @@
             "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
             "\n",
             "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://e040943e1513c088cf.gradio.live\n",
+            "* Running on public URL: https://5e77da068990bed047.gradio.live\n",
             "\n",
             "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
           ]
@@ -1315,7 +1313,7 @@
               "<IPython.core.display.HTML object>"
             ],
             "text/html": [
-              "<div><iframe src=\"https://e040943e1513c088cf.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+              "<div><iframe src=\"https://5e77da068990bed047.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
             ]
           },
           "metadata": {}
