--- a/bots/prototypes/oberon_trading_bot.ipynb
+++ b/bots/prototypes/oberon_trading_bot.ipynb
@@ -30,20 +30,20 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Main Code"
-      ],
-      "metadata": {
-        "id": "wyUsFfiVRsqj"
-      }
-    },
-    {
-      "cell_type": "markdown",
-      "source": [
         "## NOTE: DQN doesn't switch signals. (WIP)\n",
         "Charting and data saving is fully functional. Run `Save Data` before training DQN."
       ],
       "metadata": {
         "id": "o67tmLWjO22Y"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "# Main Code"
+      ],
+      "metadata": {
+        "id": "wyUsFfiVRsqj"
       }
     },
     {
@@ -1692,6 +1692,19 @@
           "metadata": {}
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### Changelog: v1.2.1\n",
+        "- Added trade table\n",
+        "- Added user adjustable weights\n",
+        "- Added basic MACD\n",
+        "- Added trade signals"
+      ],
+      "metadata": {
+        "id": "IQbyIzdeH0sj"
+      }
     }
   ]
 }
