--- a/bots/prototypes/oberon_trading_bot.ipynb
+++ b/bots/prototypes/oberon_trading_bot.ipynb
@@ -24,7 +24,7 @@
       "metadata": {
         "id": "2aAxxALzQmBk"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -53,8 +53,17 @@
         "DEBUG = True\n",
         "def debug_print(msg):\n",
         "    if DEBUG:\n",
-        "        print(msg)\n",
-        "\n",
+        "        print(msg)"
+      ],
+      "metadata": {
+        "id": "4xEOCh0iRcKL"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# FOMC Dates Scraper\n",
         "def get_fomc_dates(start_date, end_date):\n",
         "    url = \"https://www.federalreserve.gov/monetarypolicy/fomccalendars.htm\"\n",
@@ -81,8 +90,17 @@
         "        return filtered_dates\n",
         "    except Exception as e:\n",
         "        debug_print(f\"Error scraping FOMC dates: {e}\")\n",
-        "        return []\n",
-        "\n",
+        "        return []"
+      ],
+      "metadata": {
+        "id": "MYwBlqfqJCtQ"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Indicator Functions\n",
         "def exp_average(series, period):\n",
         "    return series.ewm(span=period, adjust=False).mean()\n",
@@ -201,8 +219,17 @@
         "        \"basicMACD\": macd_line,\n",
         "        \"signal\": signal_line,\n",
         "        \"hist\": hist_line\n",
-        "    }\n",
-        "\n",
+        "    }"
+      ],
+      "metadata": {
+        "id": "FOFxV4ZhJHAv"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Historical Signals Extraction\n",
         "def extract_signals(df, signalUp_ZLMA, signalDn_ZLMA, bullPt, bearPt,\n",
         "                    upSig_MCDX, dnSig_MCDX, length_m=14):\n",
@@ -416,8 +443,17 @@
         "    if not signals_df.empty:\n",
         "        signals_df[\"Date\"]= pd.to_datetime(signals_df[\"Date\"])\n",
         "        signals_df= signals_df.sort_values(\"Date\", ascending=False)\n",
-        "    return signals_df\n",
-        "\n",
+        "    return signals_df"
+      ],
+      "metadata": {
+        "id": "ODoRmrcXJLQ7"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# RSI and MCDX signals\n",
         "def calc_rsi_entire_series(df, bullPt, bearPt):\n",
         "    rsi_series = []\n",
@@ -439,8 +475,17 @@
         "        elif pd.notna(dnSig_MCDX.iloc[i]):\n",
         "            last_signal = \"Sell\"\n",
         "        mcdx_series.append(last_signal)\n",
-        "    return pd.Series(mcdx_series, index=df.index)\n",
-        "\n",
+        "    return pd.Series(mcdx_series, index=df.index)"
+      ],
+      "metadata": {
+        "id": "24xhwC1cJODl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Weighted scoreboard\n",
         "def scoreboard_for_day(\n",
         "    df, i,\n",
@@ -559,8 +604,17 @@
         "        if bullish_count>= (total_signals/2.0):\n",
         "            return \"Buy\"\n",
         "        else:\n",
-        "            return \"Sell\"\n",
-        "\n",
+        "            return \"Sell\""
+      ],
+      "metadata": {
+        "id": "6ewobcL4JRD5"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Historical Trade Table\n",
         "def simulate_trades_overall_signal(\n",
         "    df, rsi_series, mcdx_series,\n",
@@ -657,9 +711,18 @@
         "                \"PnL%\": round(pnl_pct,2),\n",
         "                \"CumulativePnL%\": round(cumulative_pnl,2)\n",
         "            })\n",
-        "    return pd.DataFrame(trade_log)\n",
-        "\n",
-        "# Single-bar scoreboard with ZeroLag + Basic MACD\n",
+        "    return pd.DataFrame(trade_log)"
+      ],
+      "metadata": {
+        "id": "GAj0jeVcJT7U"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Scoreboard with ZeroLag + Basic MACD\n",
         "def extract_current_status(\n",
         "    df, signalUp_ZLMA, signalDn_ZLMA, bullPt, bearPt,\n",
         "    upSig_MCDX, dnSig_MCDX,\n",
@@ -804,9 +867,18 @@
         "        str(round(total_score,2)),\n",
         "        overall\n",
         "    ]\n",
-        "    return pd.DataFrame({\"Indicator\": indicators, \"Current Signal\": signals_})\n",
-        "\n",
-        "# Generic Plot (ZLMA, Bressert, MCDX, MCDX Bars, ZeroLag MACD, IV, Momentum Z-Score, Basic MACD)\n",
+        "    return pd.DataFrame({\"Indicator\": indicators, \"Current Signal\": signals_})"
+      ],
+      "metadata": {
+        "id": "w7ceOEbTJYLK"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Plot (ZLMA, Bressert, MCDX, MCDX Bars, ZeroLag MACD, IV, Momentum Z-Score, Basic MACD)\n",
         "def create_generic_plot(df, ticker, start_date, end_date,\n",
         "                        ema_value, zlma, signalUp_ZLMA, signalDn_ZLMA, zlma_color, ema_color,\n",
         "                        rsi_ma_base, rsi_upper_bound, rsi_lower_bound, bullPt, bearPt,\n",
@@ -1012,8 +1084,17 @@
         "    buf = io.BytesIO()\n",
         "    fig.savefig(buf, format=\"png\", bbox_inches=\"tight\")\n",
         "    buf.seek(0)\n",
-        "    return Image.open(buf)\n",
-        "\n",
+        "    return Image.open(buf)"
+      ],
+      "metadata": {
+        "id": "VWYU__5gJc-S"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Main Chart-Generating Function with trade log\n",
         "def generate_plot(\n",
         "    ticker=\"SPY\",\n",
@@ -1220,8 +1301,17 @@
         "        return pil_img, current_status_df, historical_signals_df, trade_log_df\n",
         "    except Exception as e:\n",
         "        debug_print(f\"Error: {e}\")\n",
-        "        raise gr.Error(f\"An error occurred: {e}\")\n",
-        "\n",
+        "        raise gr.Error(f\"An error occurred: {e}\")"
+      ],
+      "metadata": {
+        "id": "PgH0om2BJgFa"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Save Historical Data\n",
         "def save_historical_data(ticker=\"SPY\", start_date=\"2022-01-01\", end_date=\"2023-01-01\",\n",
         "                         data_filename=\"full_data.csv\", signals_filename=\"signals_data.csv\"):\n",
@@ -1338,8 +1428,17 @@
         "\n",
         "    except Exception as e:\n",
         "        debug_print(f\"Error: {e}\")\n",
-        "        raise gr.Error(f\"An error occurred: {e}\")\n",
-        "\n",
+        "        raise gr.Error(f\"An error occurred: {e}\")"
+      ],
+      "metadata": {
+        "id": "YsPmzHCdJiZ_"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# DQN + environment\n",
         "class TradingEnv:\n",
         "    def __init__(self, df, window_size=3, max_hold_days=10):\n",
@@ -1554,8 +1653,17 @@
         "        trade_plot= plot_trades_chart(df, all_actions)\n",
         "        return rewards_df, trade_plot\n",
         "    except Exception as e:\n",
-        "        raise gr.Error(f\"An error occurred in the DQN module: {e}\")\n",
-        "\n",
+        "        raise gr.Error(f\"An error occurred in the DQN module: {e}\")"
+      ],
+      "metadata": {
+        "id": "wLlMwRwGJl8Y"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "# Gradio UI\n",
         "default_end_date= datetime.now().strftime(\"%Y-%m-%d\")\n",
         "default_start_date= (datetime.now()-timedelta(days=365)).strftime(\"%Y-%m-%d\")\n",
@@ -1639,40 +1747,10 @@
         "    demo.launch()"
       ],
       "metadata": {
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 630
-        },
-        "id": "4xEOCh0iRcKL",
-        "outputId": "a795de9c-a1c1-4569-aa2b-d049c18dc7d3"
+        "id": "_8xShuqrKCYd"
       },
-      "execution_count": 2,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
-            "\n",
-            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
-            "* Running on public URL: https://ce4fad57e4bc7a42c4.gradio.live\n",
-            "\n",
-            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
-          ]
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "<div><iframe src=\"https://ce4fad57e4bc7a42c4.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
-            ]
-          },
-          "metadata": {}
-        }
-      ]
+      "execution_count": null,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
