adding checkpoint with working news calls, but no model

--- a/eda.ipynb
+++ b/eda.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -13,12 +13,15 @@
       "\u001b[0m\u001b[33mWARNING: Skipping /Users/I523193/miniforge3/envs/tf/lib/python3.12/site-packages/typer-0.9.4.dist-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
       "\u001b[0m\u001b[33mWARNING: Skipping /Users/I523193/miniforge3/envs/tf/lib/python3.12/site-packages/typer-0.9.4.dist-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
       "\u001b[0m\u001b[33mWARNING: Skipping /Users/I523193/miniforge3/envs/tf/lib/python3.12/site-packages/typer-0.9.4.dist-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /Users/I523193/miniforge3/envs/tf/lib/python3.12/site-packages/typer-0.9.4.dist-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
+      "\u001b[0m\u001b[33mWARNING: Skipping /Users/I523193/miniforge3/envs/tf/lib/python3.12/site-packages/typer-0.9.4.dist-info due to invalid metadata entry 'name'\u001b[0m\u001b[33m\n",
       "\u001b[0m"
      ]
     }
    ],
    "source": [
-    "!pip install python-dotenv -q"
+    "!pip install python-dotenv -q\n",
+    "!pip install yfinance -q"
    ]
   },
   {
@@ -73,7 +76,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -83,22 +86,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "symbols = ['AAPL', 'MSFT', 'GOOGL', 'AMZN', 'META', 'NVDA']\n",
+    "symbols = ['AAPL']\n",
     "timeframe = TimeFrame.Day\n",
-    "days = 365  # Past year"
+    "days = 10  # Past year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_historical_data(symbol, days=365):\n",
+    "def get_historical_data(symbol, days=1):\n",
     "    \"\"\"Fetch historical stock data.\"\"\"\n",
     "    end = datetime.now()\n",
     "    start = end - timedelta(days=days)\n",
@@ -126,19 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:__main__:Retrieved 249 bars for AAPL\n",
-      "INFO:__main__:Retrieved 249 bars for MSFT\n",
-      "INFO:__main__:Retrieved 249 bars for GOOGL\n",
-      "INFO:__main__:Retrieved 249 bars for AMZN\n",
-      "INFO:__main__:Retrieved 249 bars for META\n",
-      "INFO:__main__:Retrieved 249 bars for NVDA\n"
+      "INFO:__main__:Retrieved 6 bars for AAPL\n"
      ]
     }
    ],
@@ -152,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -161,7 +159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -212,72 +210,303 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th rowspan=\"3\" valign=\"top\">AAPL</th>\n",
+       "      <th rowspan=\"6\" valign=\"top\">AAPL</th>\n",
        "      <th>0</th>\n",
        "      <td>AAPL</td>\n",
-       "      <td>2024-03-18 04:00:00+00:00</td>\n",
-       "      <td>175.57</td>\n",
-       "      <td>177.710</td>\n",
-       "      <td>173.52</td>\n",
-       "      <td>173.72</td>\n",
-       "      <td>75604184.0</td>\n",
-       "      <td>866388.0</td>\n",
-       "      <td>175.502415</td>\n",
+       "      <td>2025-03-10 04:00:00+00:00</td>\n",
+       "      <td>235.540</td>\n",
+       "      <td>236.1600</td>\n",
+       "      <td>224.22</td>\n",
+       "      <td>227.48</td>\n",
+       "      <td>72071197.0</td>\n",
+       "      <td>1152721.0</td>\n",
+       "      <td>227.623563</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>AAPL</td>\n",
-       "      <td>2024-03-19 04:00:00+00:00</td>\n",
-       "      <td>174.34</td>\n",
-       "      <td>176.605</td>\n",
-       "      <td>173.03</td>\n",
-       "      <td>176.08</td>\n",
-       "      <td>55215244.0</td>\n",
-       "      <td>636058.0</td>\n",
-       "      <td>175.453787</td>\n",
+       "      <td>2025-03-11 04:00:00+00:00</td>\n",
+       "      <td>223.805</td>\n",
+       "      <td>225.8399</td>\n",
+       "      <td>217.45</td>\n",
+       "      <td>220.84</td>\n",
+       "      <td>76137410.0</td>\n",
+       "      <td>899698.0</td>\n",
+       "      <td>221.096091</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>AAPL</td>\n",
-       "      <td>2024-03-20 04:00:00+00:00</td>\n",
-       "      <td>175.72</td>\n",
-       "      <td>178.670</td>\n",
-       "      <td>175.09</td>\n",
-       "      <td>178.67</td>\n",
-       "      <td>53423102.0</td>\n",
-       "      <td>641653.0</td>\n",
-       "      <td>177.199304</td>\n",
+       "      <td>2025-03-12 04:00:00+00:00</td>\n",
+       "      <td>220.140</td>\n",
+       "      <td>221.7500</td>\n",
+       "      <td>214.91</td>\n",
+       "      <td>216.98</td>\n",
+       "      <td>62547467.0</td>\n",
+       "      <td>792931.0</td>\n",
+       "      <td>217.596761</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-03-13 04:00:00+00:00</td>\n",
+       "      <td>215.950</td>\n",
+       "      <td>216.8394</td>\n",
+       "      <td>208.42</td>\n",
+       "      <td>209.68</td>\n",
+       "      <td>61368330.0</td>\n",
+       "      <td>768934.0</td>\n",
+       "      <td>212.024245</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-03-14 04:00:00+00:00</td>\n",
+       "      <td>211.250</td>\n",
+       "      <td>213.9500</td>\n",
+       "      <td>209.58</td>\n",
+       "      <td>213.49</td>\n",
+       "      <td>60107582.0</td>\n",
+       "      <td>668917.0</td>\n",
+       "      <td>212.466779</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>AAPL</td>\n",
+       "      <td>2025-03-17 04:00:00+00:00</td>\n",
+       "      <td>213.310</td>\n",
+       "      <td>214.9700</td>\n",
+       "      <td>209.97</td>\n",
+       "      <td>211.30</td>\n",
+       "      <td>21601713.0</td>\n",
+       "      <td>358577.0</td>\n",
+       "      <td>212.300671</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "             symbol                 timestamp    open     high     low  \\\n",
-       "Symbol Index                                                             \n",
-       "AAPL   0       AAPL 2024-03-18 04:00:00+00:00  175.57  177.710  173.52   \n",
-       "       1       AAPL 2024-03-19 04:00:00+00:00  174.34  176.605  173.03   \n",
-       "       2       AAPL 2024-03-20 04:00:00+00:00  175.72  178.670  175.09   \n",
+       "             symbol                 timestamp     open      high     low  \\\n",
+       "Symbol Index                                                               \n",
+       "AAPL   0       AAPL 2025-03-10 04:00:00+00:00  235.540  236.1600  224.22   \n",
+       "       1       AAPL 2025-03-11 04:00:00+00:00  223.805  225.8399  217.45   \n",
+       "       2       AAPL 2025-03-12 04:00:00+00:00  220.140  221.7500  214.91   \n",
+       "       3       AAPL 2025-03-13 04:00:00+00:00  215.950  216.8394  208.42   \n",
+       "       4       AAPL 2025-03-14 04:00:00+00:00  211.250  213.9500  209.58   \n",
+       "       5       AAPL 2025-03-17 04:00:00+00:00  213.310  214.9700  209.97   \n",
        "\n",
        "               close      volume  trade_count        vwap  \n",
        "Symbol Index                                               \n",
-       "AAPL   0      173.72  75604184.0     866388.0  175.502415  \n",
-       "       1      176.08  55215244.0     636058.0  175.453787  \n",
-       "       2      178.67  53423102.0     641653.0  177.199304  "
+       "AAPL   0      227.48  72071197.0    1152721.0  227.623563  \n",
+       "       1      220.84  76137410.0     899698.0  221.096091  \n",
+       "       2      216.98  62547467.0     792931.0  217.596761  \n",
+       "       3      209.68  61368330.0     768934.0  212.024245  \n",
+       "       4      213.49  60107582.0     668917.0  212.466779  \n",
+       "       5      211.30  21601713.0     358577.0  212.300671  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "combined_df.head(3)"
+    "combined_df.head(20)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import yfinance as yf"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[*********************100%***********************]  1 of 1 completed\n"
+     ]
+    }
+   ],
+   "source": [
+    "df = yf.download(\"AAPL\", period=\"10d\", interval=\"1d\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr th {\n",
+       "        text-align: left;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead tr:last-of-type th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr>\n",
+       "      <th>Price</th>\n",
+       "      <th>Close</th>\n",
+       "      <th>High</th>\n",
+       "      <th>Low</th>\n",
+       "      <th>Open</th>\n",
+       "      <th>Volume</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Ticker</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AAPL</th>\n",
+       "      <th>AAPL</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Date</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2025-03-04</th>\n",
+       "      <td>235.929993</td>\n",
+       "      <td>240.070007</td>\n",
+       "      <td>234.679993</td>\n",
+       "      <td>237.710007</td>\n",
+       "      <td>53798100</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-05</th>\n",
+       "      <td>235.740005</td>\n",
+       "      <td>236.550003</td>\n",
+       "      <td>229.229996</td>\n",
+       "      <td>235.419998</td>\n",
+       "      <td>47227600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-06</th>\n",
+       "      <td>235.330002</td>\n",
+       "      <td>237.860001</td>\n",
+       "      <td>233.160004</td>\n",
+       "      <td>234.440002</td>\n",
+       "      <td>45170400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-07</th>\n",
+       "      <td>239.070007</td>\n",
+       "      <td>241.369995</td>\n",
+       "      <td>234.759995</td>\n",
+       "      <td>235.110001</td>\n",
+       "      <td>46273600</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-10</th>\n",
+       "      <td>227.479996</td>\n",
+       "      <td>236.160004</td>\n",
+       "      <td>224.220001</td>\n",
+       "      <td>235.539993</td>\n",
+       "      <td>72071200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-11</th>\n",
+       "      <td>220.839996</td>\n",
+       "      <td>225.839996</td>\n",
+       "      <td>217.449997</td>\n",
+       "      <td>223.809998</td>\n",
+       "      <td>76137400</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-12</th>\n",
+       "      <td>216.979996</td>\n",
+       "      <td>221.750000</td>\n",
+       "      <td>214.910004</td>\n",
+       "      <td>220.139999</td>\n",
+       "      <td>62547500</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-13</th>\n",
+       "      <td>209.679993</td>\n",
+       "      <td>216.839996</td>\n",
+       "      <td>208.419998</td>\n",
+       "      <td>215.949997</td>\n",
+       "      <td>61368300</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-14</th>\n",
+       "      <td>213.490005</td>\n",
+       "      <td>213.949997</td>\n",
+       "      <td>209.580002</td>\n",
+       "      <td>211.250000</td>\n",
+       "      <td>60060200</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2025-03-17</th>\n",
+       "      <td>211.324997</td>\n",
+       "      <td>214.970001</td>\n",
+       "      <td>209.979996</td>\n",
+       "      <td>213.360001</td>\n",
+       "      <td>21635342</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Price            Close        High         Low        Open    Volume\n",
+       "Ticker            AAPL        AAPL        AAPL        AAPL      AAPL\n",
+       "Date                                                                \n",
+       "2025-03-04  235.929993  240.070007  234.679993  237.710007  53798100\n",
+       "2025-03-05  235.740005  236.550003  229.229996  235.419998  47227600\n",
+       "2025-03-06  235.330002  237.860001  233.160004  234.440002  45170400\n",
+       "2025-03-07  239.070007  241.369995  234.759995  235.110001  46273600\n",
+       "2025-03-10  227.479996  236.160004  224.220001  235.539993  72071200\n",
+       "2025-03-11  220.839996  225.839996  217.449997  223.809998  76137400\n",
+       "2025-03-12  216.979996  221.750000  214.910004  220.139999  62547500\n",
+       "2025-03-13  209.679993  216.839996  208.419998  215.949997  61368300\n",
+       "2025-03-14  213.490005  213.949997  209.580002  211.250000  60060200\n",
+       "2025-03-17  211.324997  214.970001  209.979996  213.360001  21635342"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(20)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -285,21 +514,21 @@
      "output_type": "stream",
      "text": [
       "<class 'pandas.core.frame.DataFrame'>\n",
-      "MultiIndex: 1494 entries, ('AAPL', 0) to ('NVDA', 248)\n",
+      "MultiIndex: 12 entries, ('AAPL', 0) to ('NVDA', 1)\n",
       "Data columns (total 9 columns):\n",
       " #   Column       Non-Null Count  Dtype              \n",
       "---  ------       --------------  -----              \n",
-      " 0   symbol       1494 non-null   object             \n",
-      " 1   timestamp    1494 non-null   datetime64[ns, UTC]\n",
-      " 2   open         1494 non-null   float64            \n",
-      " 3   high         1494 non-null   float64            \n",
-      " 4   low          1494 non-null   float64            \n",
-      " 5   close        1494 non-null   float64            \n",
-      " 6   volume       1494 non-null   float64            \n",
-      " 7   trade_count  1494 non-null   float64            \n",
-      " 8   vwap         1494 non-null   float64            \n",
+      " 0   symbol       12 non-null     object             \n",
+      " 1   timestamp    12 non-null     datetime64[ns, UTC]\n",
+      " 2   open         12 non-null     float64            \n",
+      " 3   high         12 non-null     float64            \n",
+      " 4   low          12 non-null     float64            \n",
+      " 5   close        12 non-null     float64            \n",
+      " 6   volume       12 non-null     float64            \n",
+      " 7   trade_count  12 non-null     float64            \n",
+      " 8   vwap         12 non-null     float64            \n",
       "dtypes: datetime64[ns, UTC](1), float64(7), object(1)\n",
-      "memory usage: 109.9+ KB\n"
+      "memory usage: 1.3+ KB\n"
      ]
     }
    ],
