--- a/bots/prototypes/oberon_trading_bot.ipynb
+++ b/bots/prototypes/oberon_trading_bot.ipynb
@@ -24,7 +24,7 @@
       "metadata": {
         "id": "2aAxxALzQmBk"
       },
-      "execution_count": null,
+      "execution_count": 23,
       "outputs": []
     },
     {
@@ -58,7 +58,7 @@
       "metadata": {
         "id": "4xEOCh0iRcKL"
       },
-      "execution_count": null,
+      "execution_count": 24,
       "outputs": []
     },
     {
@@ -95,7 +95,7 @@
       "metadata": {
         "id": "MYwBlqfqJCtQ"
       },
-      "execution_count": null,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -224,7 +224,7 @@
       "metadata": {
         "id": "FOFxV4ZhJHAv"
       },
-      "execution_count": null,
+      "execution_count": 26,
       "outputs": []
     },
     {
@@ -448,7 +448,7 @@
       "metadata": {
         "id": "ODoRmrcXJLQ7"
       },
-      "execution_count": null,
+      "execution_count": 27,
       "outputs": []
     },
     {
@@ -480,7 +480,7 @@
       "metadata": {
         "id": "24xhwC1cJODl"
       },
-      "execution_count": null,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -609,7 +609,7 @@
       "metadata": {
         "id": "6ewobcL4JRD5"
       },
-      "execution_count": null,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -624,14 +624,14 @@
         "    weight_zscore=1.0, weight_mg=1.0, weight_md=1.0, weight_ms=1.0,\n",
         "    weight_zeromacd=1.0, weight_basicmacd=1.0\n",
         "):\n",
-        "    position=0\n",
-        "    entry_price=0.0\n",
-        "    trade_log=[]\n",
-        "    cumulative_pnl=0.0\n",
+        "    position = 0\n",
+        "    entry_price = 0.0\n",
+        "    trade_log = []\n",
+        "    cumulative_pnl_sum = 0.0\n",
+        "    prev_signal = \"Neutral\"\n",
         "\n",
-        "    prev_signal=\"Neutral\"\n",
         "    for i in range(len(df)):\n",
-        "        day_signal= scoreboard_for_day(\n",
+        "        day_signal = scoreboard_for_day(\n",
         "            df, i, rsi_series, mcdx_series,\n",
         "            zero_macd_dict, basic_macd_dict,\n",
         "            length_m,\n",
@@ -639,84 +639,93 @@
         "            weight_zscore, weight_mg, weight_md, weight_ms,\n",
         "            weight_zeromacd, weight_basicmacd\n",
         "        )\n",
-        "        price_i= df['close'].iloc[i]\n",
-        "        date_i=  df.index[i]\n",
+        "        price_i = df['close'].iloc[i]\n",
+        "        date_i = df.index[i]\n",
         "\n",
-        "        if prev_signal in [\"Sell\",\"Neutral\"] and day_signal==\"Buy\":\n",
-        "            if position==-1:\n",
-        "                exit_price= price_i\n",
-        "                pnl_pct= (entry_price- exit_price)/ entry_price*100\n",
-        "                cumulative_pnl+= pnl_pct\n",
+        "        # Flip from Sell->Buy => close short\n",
+        "        if prev_signal in [\"Sell\", \"Neutral\"] and day_signal == \"Buy\":\n",
+        "            if position == -1:\n",
+        "                exit_price = price_i\n",
+        "                pnl_pct = ((entry_price / exit_price) - 1)*100\n",
+        "                cumulative_pnl_sum += pnl_pct\n",
         "                trade_log.append({\n",
         "                    \"EntryDate\": entry_dt_str,\n",
         "                    \"ExitDate\": date_i.strftime(\"%Y-%m-%d\"),\n",
         "                    \"Position\": \"Short\",\n",
-        "                    \"EntryPrice\": entry_price,\n",
-        "                    \"ExitPrice\": exit_price,\n",
-        "                    \"PnL%\": round(pnl_pct,2),\n",
-        "                    \"CumulativePnL%\": round(cumulative_pnl,2)\n",
+        "                    # Round to 4 decimal places:\n",
+        "                    \"EntryPrice\": round(entry_price, 4),\n",
+        "                    \"ExitPrice\": round(exit_price, 4),\n",
+        "                    \"PnL%\": round(pnl_pct, 2),\n",
+        "                    \"CumulativePnL%\": round(cumulative_pnl_sum, 2)\n",
         "                })\n",
-        "                position=0\n",
-        "            position=1\n",
-        "            entry_price= price_i\n",
-        "            entry_dt_str= date_i.strftime(\"%Y-%m-%d\")\n",
+        "                position = 0\n",
+        "            position = 1\n",
+        "            entry_price = price_i\n",
+        "            entry_dt_str = date_i.strftime(\"%Y-%m-%d\")\n",
         "\n",
-        "        elif prev_signal in [\"Buy\",\"Neutral\"] and day_signal==\"Sell\":\n",
-        "            if position==1:\n",
-        "                exit_price= price_i\n",
-        "                pnl_pct= (exit_price- entry_price)/ entry_price*100\n",
-        "                cumulative_pnl+= pnl_pct\n",
+        "        # Flip from Buy->Sell => close long\n",
+        "        elif prev_signal in [\"Buy\", \"Neutral\"] and day_signal == \"Sell\":\n",
+        "            if position == 1:\n",
+        "                exit_price = price_i\n",
+        "                pnl_pct = ((exit_price / entry_price) - 1)*100\n",
+        "                cumulative_pnl_sum += pnl_pct\n",
         "                trade_log.append({\n",
         "                    \"EntryDate\": entry_dt_str,\n",
         "                    \"ExitDate\": date_i.strftime(\"%Y-%m-%d\"),\n",
         "                    \"Position\": \"Long\",\n",
-        "                    \"EntryPrice\": entry_price,\n",
-        "                    \"ExitPrice\": exit_price,\n",
-        "                    \"PnL%\": round(pnl_pct,2),\n",
-        "                    \"CumulativePnL%\": round(cumulative_pnl,2)\n",
+        "                    \"EntryPrice\": round(entry_price, 4),\n",
+        "                    \"ExitPrice\": round(exit_price, 4),\n",
+        "                    \"PnL%\": round(pnl_pct, 2),\n",
+        "                    \"CumulativePnL%\": round(cumulative_pnl_sum, 2)\n",
         "                })\n",
-        "                position=0\n",
-        "            position=-1\n",
-        "            entry_price= price_i\n",
-        "            entry_dt_str= date_i.strftime(\"%Y-%m-%d\")\n",
+        "                position = 0\n",
+        "            position = -1\n",
+        "            entry_price = price_i\n",
+        "            entry_dt_str = date_i.strftime(\"%Y-%m-%d\")\n",
         "\n",
-        "        prev_signal= day_signal\n",
+        "        prev_signal = day_signal\n",
         "\n",
-        "    if position!=0:\n",
-        "        final_price= df['close'].iloc[-1]\n",
-        "        final_date= df.index[-1]\n",
-        "        if position==1:\n",
-        "            exit_price= final_price\n",
-        "            pnl_pct= (exit_price- entry_price)/ entry_price*100\n",
-        "            cumulative_pnl+= pnl_pct\n",
+        "    # Close any open position at the end\n",
+        "    if position != 0:\n",
+        "        final_price = df['close'].iloc[-1]\n",
+        "        final_date = df.index[-1]\n",
+        "        if position == 1:\n",
+        "            exit_price = final_price\n",
+        "            pnl_pct = ((exit_price / entry_price) - 1)*100\n",
+        "            cumulative_pnl_sum += pnl_pct\n",
         "            trade_log.append({\n",
         "                \"EntryDate\": entry_dt_str,\n",
         "                \"ExitDate\": final_date.strftime(\"%Y-%m-%d\"),\n",
         "                \"Position\": \"Long\",\n",
-        "                \"EntryPrice\": entry_price,\n",
-        "                \"ExitPrice\": exit_price,\n",
-        "                \"PnL%\": round(pnl_pct,2),\n",
-        "                \"CumulativePnL%\": round(cumulative_pnl,2)\n",
+        "                \"EntryPrice\": round(entry_price, 4),\n",
+        "                \"ExitPrice\": round(exit_price, 4),\n",
+        "                \"PnL%\": round(pnl_pct, 2),\n",
+        "                \"CumulativePnL%\": round(cumulative_pnl_sum, 2)\n",
         "            })\n",
         "        else:\n",
-        "            exit_price= final_price\n",
-        "            pnl_pct= (entry_price- exit_price)/ entry_price*100\n",
-        "            cumulative_pnl+= pnl_pct\n",
+        "            exit_price = final_price\n",
+        "            pnl_pct = ((entry_price / exit_price) - 1)*100\n",
+        "            cumulative_pnl_sum += pnl_pct\n",
         "            trade_log.append({\n",
         "                \"EntryDate\": entry_dt_str,\n",
         "                \"ExitDate\": final_date.strftime(\"%Y-%m-%d\"),\n",
         "                \"Position\": \"Short\",\n",
-        "                \"EntryPrice\": entry_price,\n",
-        "                \"ExitPrice\": exit_price,\n",
-        "                \"PnL%\": round(pnl_pct,2),\n",
-        "                \"CumulativePnL%\": round(cumulative_pnl,2)\n",
+        "                \"EntryPrice\": round(entry_price, 4),\n",
+        "                \"ExitPrice\": round(exit_price, 4),\n",
+        "                \"PnL%\": round(pnl_pct, 2),\n",
+        "                \"CumulativePnL%\": round(cumulative_pnl_sum, 2)\n",
         "            })\n",
-        "    return pd.DataFrame(trade_log)"
+        "\n",
+        "    trade_df = pd.DataFrame(trade_log)\n",
+        "    trade_df[\"ExitDate_dt\"] = pd.to_datetime(trade_df[\"ExitDate\"])\n",
+        "    trade_df = trade_df.sort_values(\"ExitDate_dt\", ascending=False).reset_index(drop=True)\n",
+        "    trade_df.drop(columns=[\"ExitDate_dt\"], inplace=True)\n",
+        "    return trade_df"
       ],
       "metadata": {
         "id": "GAj0jeVcJT7U"
       },
-      "execution_count": null,
+      "execution_count": 53,
       "outputs": []
     },
     {
@@ -851,7 +860,7 @@
         "    indicators= [\n",
         "        \"ZLMA\",\"RSI\",\"MCDX\",\"DSS\",\"Z-Score\",\n",
         "        \"Momentum Grade\",\"Momentum Direction\",\"Momentum State\",\n",
-        "        \"ZeroLag MACD\",\"Basic MACD\",\"ScoreSum\",\"OverallTrade\"\n",
+        "        \"ZeroLag MACD\",\"Basic MACD\",\"ScoreSum\",\"Overall Trade\"\n",
         "    ]\n",
         "    signals_=[\n",
         "        zlma_status,\n",
@@ -872,7 +881,7 @@
       "metadata": {
         "id": "w7ceOEbTJYLK"
       },
-      "execution_count": null,
+      "execution_count": 55,
       "outputs": []
     },
     {
@@ -1089,7 +1098,7 @@
       "metadata": {
         "id": "VWYU__5gJc-S"
       },
-      "execution_count": null,
+      "execution_count": 32,
       "outputs": []
     },
     {
@@ -1224,7 +1233,8 @@
         "                                              MacdEmaLength=9, useEma=True, useOldAlgo=False)\n",
         "\n",
         "        # Basic MACD\n",
-        "        basic_macd_dict= compute_basic_macd(df['close'], fast=12, slow=26, signal=9)\n",
+        "        # basic_macd_dict= compute_basic_macd(df['close'], fast=12, slow=26, signal=9)\n",
+        "        basic_macd_dict= compute_basic_macd(df['close'], fast=30, slow=50, signal=9)\n",
         "\n",
         "        # Create multi-panel figure\n",
         "        fig= create_generic_plot(\n",
@@ -1306,7 +1316,7 @@
       "metadata": {
         "id": "PgH0om2BJgFa"
       },
-      "execution_count": null,
+      "execution_count": 33,
       "outputs": []
     },
     {
@@ -1433,7 +1443,7 @@
       "metadata": {
         "id": "YsPmzHCdJiZ_"
       },
-      "execution_count": null,
+      "execution_count": 34,
       "outputs": []
     },
     {
@@ -1658,7 +1668,7 @@
       "metadata": {
         "id": "wLlMwRwGJl8Y"
       },
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
     },
     {
@@ -1681,13 +1691,13 @@
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"MCDX Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"DSS Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"Z-Score Weight\"),\n",
-        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"Momentum Grade Weight\"),\n",
+        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=0.0, label=\"Momentum Grade Weight\"),\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"Momentum Direction Weight\"),\n",
-        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"Momentum State Weight\"),\n",
+        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=0.0, label=\"Momentum State Weight\"),\n",
         "\n",
         "        # Two MACD weights\n",
         "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"ZeroLag MACD Weight\"),\n",
-        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=0.0, label=\"Basic MACD Weight\"),\n",
+        "        gr.Slider(minimum=0, maximum=2, step=0.1, value=1.0, label=\"Basic MACD Weight\"),\n",
         "    ],\n",
         "    outputs=[\n",
         "        gr.Image(type=\"pil\", label=\"Chart\"),\n",
@@ -1747,15 +1757,49 @@
         "    demo.launch()"
       ],
       "metadata": {
-        "id": "_8xShuqrKCYd"
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 627
+        },
+        "id": "_8xShuqrKCYd",
+        "outputId": "db92979e-d142-4489-d0b5-81aba86b62cf"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 56,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Running Gradio in a Colab notebook requires sharing enabled. Automatically setting `share=True` (you can turn this off by setting `share=False` in `launch()` explicitly).\n",
+            "\n",
+            "Colab notebook detected. To show errors in colab notebook, set debug=True in launch()\n",
+            "* Running on public URL: https://cd5600dd1314acc187.gradio.live\n",
+            "\n",
+            "This share link expires in 72 hours. For free permanent hosting and GPU upgrades, run `gradio deploy` from the terminal in the working directory to deploy to Hugging Face Spaces (https://huggingface.co/spaces)\n"
+          ]
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "<div><iframe src=\"https://cd5600dd1314acc187.gradio.live\" width=\"100%\" height=\"500\" allow=\"autoplay; camera; microphone; clipboard-read; clipboard-write;\" frameborder=\"0\" allowfullscreen></iframe></div>"
+            ]
+          },
+          "metadata": {}
+        }
+      ]
     },
     {
       "cell_type": "markdown",
       "source": [
-        "### Changelog: v1.2.1\n",
+        "### Changelog Version: 1.2.2\n",
+        "- Fixed trade table\n",
+        "- Minor formatting\n",
+        "\n",
+        "### 1.2.1\n",
         "- Added trade table\n",
         "- Added user adjustable weights\n",
         "- Added basic MACD\n",
